--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.3.4",
-    "lodash": "^4.9.0"
+    "lodash": "^4.9.0",
+    "redux": "^3.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
