--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JS Calculator in Redux, with multiple UI framework implementations.",
   "main": "index.js",
   "scripts": {
-    "ng": "node angular-index.js",
+    "react": "webpack-dev-server --content-base build/react/",
+    "angular": "webpack-dev-server --content-base build/angular/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,20 +13,28 @@
   "dependencies": {
     "es6-promise": "^3.1.2",
     "lodash": "^4.9.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.2",
+    "react-router": "^2.1.1",
     "redux": "^3.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
     "json-loader": "^0.5.4",
     "node-sass": "^3.4.2",
+    "open-browser-webpack-plugin": "0.0.2",
     "postcss-loader": "^0.8.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.15"
+    "webpack": "^1.12.15",
+    "webpack-dev-server": "^1.14.1"
   }
 }
