--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "JS Calculator in Redux, with multiple UI framework implementations.",
   "main": "index.js",
   "scripts": {
-    "react": "webpack-dev-server --content-base build/react/",
-    "angular": "webpack-dev-server --content-base build/angular/",
+    "react": "webpack-dev-server --content-base build/react/ --nowarn_template_set",
+    "angular": "webpack-dev-server --content-base build/angular/ --nowarn_template_set",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "angular2": "^2.0.0-beta.14",
+    "angular2": "^2.0.0-beta.17",
     "babel-runtime": "^6.6.1",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
@@ -21,9 +21,9 @@
     "react-redux": "^4.4.2",
     "react-router": "^2.1.1",
     "redux": "^3.4.0",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.2",
-    "zone.js": "^0.6.10"
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.0-beta.7",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
