--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "angular2": "^2.0.0-beta.17",
     "aurelia-bootstrapper-webpack": "^1.0.0-beta.1.0.2",
     "aurelia-framework": "^1.0.0-beta.1.2.5",
+    "aurelia-history-browser": "^1.0.0-beta.2.0.0",
     "aurelia-logging-console": "^1.0.0-beta.2.0.0",
     "aurelia-templating-binding": "^1.0.0-beta.1.2.4",
     "aurelia-templating-resources": "^1.0.0-beta.1.2.6",
+    "aurelia-templating-router": "^1.0.0-beta.1.2.1",
     "babel-runtime": "^6.6.1",
     "core-js": "^2.4.0",
     "es6-promise": "^3.1.2",
